add google analytics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <!-- Primary Meta Tags -->
     <title>Ian Concepcion — Front-End Developer / Designer</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MV0EZ4LFHL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MV0EZ4LFHL');
+    </script>
   </head>
   <body>
     <div class="content">
