--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <span class="left"></span>
               </div>
             </a>
-            <a href="https://dogrow.adriengervaix.com" target="_blank">
+            <a href="https://mwwphilippines.org/" target="_blank">
               <img src="/ianconcepcion/img/project-3.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Marine Wildlife Watch Philippines</p>
               <p class="figure">Promotes marine conservation through education, research, and advocacy.</p>
