--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p><span class="intro-text">I've built products for companies and businesses ranging from marketing websites to enterprise apps with focus on fast, elegant and accessible user experiences. </span><br>I am passionate about providing solutions to users by building accessible products.</p>
           </div>
           <div class="about-picture">
-            <img alt="" src="/ianconcepcion/img/profile.jpg">
+            <img alt="" src="./img/profile.jpg">
           </div>
         </div>
         <div class="about-services">
@@ -97,7 +97,7 @@
               Past&nbsp;Experience
             </h3>
             <p class="text-muted">Want to know more about my education and experience.</p>
-            <a href="/ianconcepcion/files/christianconcepcion_resume.pdf">My Resume</a>
+            <a href="./files/christianconcepcion_resume.pdf">My Resume</a>
           </div>
         </div>
         <div class="about-process">
@@ -190,7 +190,7 @@
           </div>
           <div class="exploration-grid">
             <a href="https://feature-shortname-crud.d2gh6ciu0bdo5u.amplifyapp.com/" target="_blank">
-              <img src="/ianconcepcion/img/project-1.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-1.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Shortname</p>
               <p class="figure">Shorten long, frequently used URLs with easy-to-remember subdomains.</p>
               <ul>
@@ -208,7 +208,7 @@
               </div>
             </a>
             <a href="https://helpcenter.trendmicro.com/en-us/" target="_blank">
-              <img src="/ianconcepcion/img/project-2.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-2.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Trend Micro - Help Center</p>
               <p class="figure">The Official Support Website for Trend Micro and Home Office Products.</p>
               <ul>
@@ -227,7 +227,7 @@
               </div>
             </a>
             <a href="https://mwwphilippines.org/" target="_blank">
-              <img src="/ianconcepcion/img/project-3.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-3.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Marine Wildlife Watch Philippines</p>
               <p class="figure">Promotes marine conservation through education, research, and advocacy.</p>
               <ul>
@@ -245,7 +245,7 @@
               </div>
             </a>
             <a href="https://dot.ph/" target="_blank">
-              <img src="/ianconcepcion/img/project-4.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-4.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">dotPH</p>
               <p class="figure">The Official Domain Name Registry of the Philippines.</p>
               <ul>
@@ -264,7 +264,7 @@
               </div>
             </a>
             <a href="https://www.phollowup.com/" target="_blank">
-              <img src="/ianconcepcion/img/project-5.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-5.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Phollowup</p>
               <p class="figure">Online scheduling system with invoicing and automated SMS reminders.</p>
               <ul>
@@ -283,7 +283,7 @@
               </div>
             </a>
             <a href="https://berderenewables.com/" target="_blank">
-              <img src="/ianconcepcion/img/project-6.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <img src="./img/project-6.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Berde Renewables</p>
               <p class="figure">Solar power that provides sustainable energy solutions in the Philippines.</p>
               <ul>
