update link of shortname project

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="exploration-grid">
-            <a href="https://feature-shortname-crud.d2gh6ciu0bdo5u.amplifyapp.com/" target="_blank">
+            <a href="https://www.shortname.it/" target="_blank">
               <img src="./img/project-1.jpg" alt="Shortname - a tool that you can use to shortening your link">
               <p class="tag">Shortname</p>
               <p class="figure">Shorten long, frequently used URLs with easy-to-remember subdomains.</p>
