add new project

--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                 <span class="left"></span>
               </div>
             </a>
-            <a href="https://mwwphilippines.org/" target="_blank">
-              <img src="./img/project-3.jpg" alt="Shortname - a tool that you can use to shortening your link">
-              <p class="tag">Marine Wildlife Watch Philippines</p>
-              <p class="figure">Promotes marine conservation through education, research, and advocacy.</p>
+            <a href="https://www.johnrobertpowers.ph/" target="_blank">
+              <img src="/img/project-7.jpg" alt="Shortname - a tool that you can use to shortening your link">
+              <p class="tag">John Robert Powers</p>
+              <p class="figure">Offers programs that develop confidence and essential soft skills, such as public speaking and leadership.</p>
               <ul>
                 <li><i class="devicon-wordpress-plain"></i></li>
                 <li><i class="devicon-php-plain"></i></li>
